10-deployment-with-ingress-and-tls/web-application/deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-application
  namespace: <YOURNAME>
  labels:
    app: web-application
    workshop: workshop
spec:
  type: LoadBalancer
  ports:
    -
      name: http
      port: 80
      targetPort: http
      protocol: TCP
    -
      name: metrics
      port: 9091
      targetPort: metrics
      protocol: TCP
  selector:
    app: web-application
