10-deployment-with-ingress-and-tls/web-application/deployment/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: web-application
  namespace: <YOURNAME>
  labels:
    app: web-application
    workshop: workshop
spec:
  tls:
    - hosts:
        - web-application-<YOURNAME>.workshop.plgrnd.be
  rules:
    - host: web-application-<YOURNAME>.workshop.plgrnd.be
      http:
        paths:
          - path: /
            backend:
              serviceName: web-application
              servicePort: 80
